Details
-
Bug
-
Status: Closed
-
Minor
-
Resolution: Fixed
-
Impala 2.7.0
Description
If Impala crashes or hits some kind of unexpected error, it's useful to know what query the thread that crashed belonged to and be able to easily find the state of the query.
We should store some state in thread-local variables and then make sure that it can be found in the event of a crash.
We should:
- Store a pointer to the RuntimeState object in a thread-local variable
- Report basic info in the breakpad crash report and logs if there is a crash
- Query ID
- Fragment instance ID
- Thread Name
- ???
- Document how to find the thread-local variables in coredumps
Attachments
Issue Links
- is duplicated by
-
IMPALA-3702 Identify crashed Impala queries
- Resolved
- is related to
-
IMPALA-4200 Collection of things to add to Minidump files
- Open
- relates to
-
IMPALA-6664 Tag log statements with query-ids
- Resolved